app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

 /*
 *= require font-awesome
 */

/* Site-wide */
body {
    background-image: image-url("bg03.jpg");
    background-size: 2000px;
    background-position: top center;
    background-attachment: fixed;
    font-family: 'Quicksand', sans-serif;
  }
    
.navbar {
  border-radius: 0px;
}

.container {
  height: 100%;
}

.wrapper{
  width: 90%;
  margin: 0 auto;
}

.white-bg {
  background-color: white;
  box-shadow: 3px 3px 10px black;
}

.row {
  margin-bottom: 5px;
}

.spacer {
  height: 50px;
}

.btn-lg {
  font-size: 2em;
  padding: 13px 18px;
}


footer {
  color: gray;
  background-color: rgba(0, 0, 0, 0.75);
  padding: 20px 45px;
  font-size: 70%;
  font-family: 'Quicksand', sans-serif;
  font-weight: normal;
}



/* Homepage Stuff  */

.hometext {
  color: white;
  text-shadow: 2px 2px 8px black;
  text-align: center;
  margin-top: 70px;
  margin-bottom: 50px;
}

.sitename {
  font-family: Ultra, serif;
  font-size: 6em;
  margin-bottom: 3%;
}

.tagline {
  font-family: 'Dancing Script', cursive;
  font-size: 4em;
  margin-top: 0px;
}

.teaser {
  margin-top: 3em;
  margin-bottom: 1em;
}

.homeicon {
  width: 100%;
  max-width: 150px;
  border-radius: 50%;
  box-shadow: 2px 2px 8px black;
}




/* Actual Readings stuff spread1.html */

.col-sm-4 {
  text-align: center;
  color: white;
  text-shadow: 2px 2px 8px black;

}

.col-sm-4 h4 {
  font-family: 'Dancing Script', cursive;
  font-size: 2.5em;
}
 
.col-sm-4 img {
  width: 100%;
  max-width: 150px;
  box-shadow: 2px 2px 8px black;  
}

.reading h4 {
  font-family: 'Dancing Script', cursive;
  font-size: 2.5em;
  text-align: center;
  color: white;
  text-shadow: 2px 2px 8px black;
}

h1.reading {
  font-family: Ultra, serif;
  font-size: 2.5em;
  margin-bottom: 2%;
  color: white;
  text-shadow: 2px 2px 8px black;
  text-align: center;
}

h2.reading {
  font-size: 1.75em;
  color: white;
  text-shadow: 2px 2px 8px black;
  text-align: center;
}

.cardback {
  height: 250px;
  width: 150px;;
  background-image: image-url("00-rear.png");
  box-shadow: 2px 2px 8px black;
  text-align: center;
  margin: 0 auto;
  margin-bottom: 3em;
}

.firstcard-hidden {
  display: none;
  box-shadow: none;
}

.secondcard-hidden {
  display: none;
  box-shadow: none;
}

.thirdcard-hidden {
  display: none;
  box-shadow: none;
}

.fourthcard-hidden {
  display: none;
  box-shadow: none;
}

.fifthcard-hidden {
  display: none;
  box-shadow: none;
}

.sixthcard-hidden {
  display: none;
  box-shadow: none;
}

.seventhcard-hidden {
  display: none;
  box-shadow: none;
}

.eighthcard-hidden {
  display: none;
  box-shadow: none;
}

/* Reading Modals */
.modal-body img {
  float: left;
  margin-right: 2em;
  box-shadow: 2px 2px 5px gray;
}

.modal-body img {
  margin-bottom: 20px;
}

/* Downloads Page */

/* TinyTarot Page */
.buynow {
  margin: 0 auto;
  margin-top: 3em;
  text-align: center;
}


/* About Page */
.padding {
  padding: 1.5em;
}

.about {
  color: white;
  text-shadow: 3px 3px 5px black;

}

.about p {
  font-family: "Quicksand";
  font-size: 1.5em;
  line-height: 2em;
}

.col-sm-3 {
  text-align: center;
  color: white;
  text-shadow: 2px 2px 8px black;
}

.headshot {
  border-radius: 50%;
  max-width: 100%;
  box-shadow: 2px 2px 8px black;
  margin-bottom: 10px;
}

.col-sm-9 img {
  width: 100%;
}

.fa {
  color: white;
  margin: 0px 8px;
  background-color: transparent;
}

a:hover {
  color: gray;
  background-color: transparent;
}


/* Cards Index */

.cardsindex img {
  width: 50px;
  margin-right: 20px;
}


/* Media Queries */
@media only screen and (max-width : 768px) {

  .sitename {
    font-size: 5em;
  }

  .tagline {
    font-size: 3em;
    margin-bottom: -1.5em;
  }

  .homeicon {
    text-align: center;
    width: 100%;
    margin-top: 3.5em;
  }
} /* closes media query */

